# learning-python

./: pyproject.toml  pyrightconfig.json
functional/iter_gen/: gen_func.py  gen_pipeline.py  generator.py  it.py  iterator.py
oop/base/: interface.py  override.py  real_overload.py  super.py
oop/decorator/: basic_wrapper.py  decorator_class2.py  paramteric_decorator.py
starting_point/main_inside/: Makefile
starting_point/main_outside/: Makefile
starting_point/module/: Makefile
starting_point/module/app/: __main__.py  h.py
tuning/cython/: Makefile  Readme.md  myext.c  setup.py
tuning/memory/: pointer.py  sizes.py  slots.py
tuning/runtime/: Makefile  cprof.py  func.py  myscript.py
typing/: any_object.py  literal.py  never.py  self_type.py  type_guard.py
typing/base/: Readme.md  abstract.py  baseclass.py  overload.py
typing/decorator/: class_decorator.py  decorator_class.py  mes_time.py
typing/generic/: box.py  fun.py  variadic.py
typing/iter_gen/: async_gen.py
typing/typeoftyping/: duck.py  mix.py  nominal.py  structural.py  structural2.py
typing/typeoftyping/structural_example/: cat.py  do.py  speak.py  speakable.py
typing/variance/: Readme.md  animals.py  contravariant_box.py  covariens_box.py  doublebox.py  function.py  invariant.py  multiple.py
